--- a/base_server/requirements.txt
+++ b/base_server/requirements.txt
@@ -7,3 +7,7 @@ cryptography
 bcrypt==4.1.2
 python-multipart==0.0.6
 slowapi==0.1.9
+aiohttp==3.9.1
+boto3==1.34.0
+aioboto3==12.3.0
+opensearch-py==2.4.0
