--- a/base_server/requirements.txt
+++ b/base_server/requirements.txt
@@ -1,13 +1,31 @@
+# Web Framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-aiomysql==0.2.0
-aioredis==2.0.1
-pydantic==2.5.0
-cryptography
-bcrypt==4.1.2
 python-multipart==0.0.6
 slowapi==0.1.9
-aiohttp==3.9.1
+
+# Database
+aiomysql==0.2.0
+aioredis==2.0.1
+
+# AWS Services
 boto3==1.34.0
 aioboto3==12.3.0
+
+# Search Engine
 opensearch-py==2.4.0
+
+# HTTP Client
+aiohttp==3.9.1
+
+# Data Validation
+pydantic==2.5.0
+
+# Security
+bcrypt==4.1.2
+cryptography
+
+# Utilities
+python-jose[cryptography]
+passlib[bcrypt]
+email-validator
