--- a/base_server/requirements.txt
+++ b/base_server/requirements.txt
@@ -10,10 +10,14 @@ aioredis==2.0.1
 
 # AWS Services
 boto3==1.34.0
+botocore==1.34.0
 aioboto3==12.3.0
+aiobotocore==2.11.2
+s3transfer==0.9.0
 
 # Search Engine
 opensearch-py==2.4.0
+requests-aws4auth==1.3.0
 
 # HTTP Client
 aiohttp==3.9.1
