--- a/base_server/frontend/ai-trading-platform/package.json
+++ b/base_server/frontend/ai-trading-platform/package.json
@@ -18,13 +18,18 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "1.2.1",
+    "dompurify": "^3.2.6",
+    "he": "^1.2.0",
+    "http-proxy-middleware": "^3.0.5",
     "lucide-react": "0.263.0",
+    "markdown-to-jsx": "^7.7.12",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-redux": "^9.2.0",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "2.7.2",
     "swr": "2.2.0",
     "tailwind-merge": "^3.3.1",
@@ -32,8 +37,10 @@
     "zustand": "4.4.0"
   },
   "devDependencies": {
+    "@types/he": "^1.2.3",
     "@types/node": "18.0.0",
-    "@types/react": "18.0.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "autoprefixer": "10.4.0",
     "eslint": "8.0.0",
     "postcss": "^8.5.6",
