--- a/base_server/template/model/requirements.txt
+++ b/base_server/template/model/requirements.txt
@@ -17,6 +17,7 @@ pydantic==2.9.2
 
 # Database
 sqlalchemy==2.0.36
+pymysql==1.1.1  # MySQL driver
 pymongo==4.10.1
 elasticsearch==8.15.1
 # sqlite3 is included in Python standard library
