--- a/base_server/frontend/ai-trading-platform/package.json
+++ b/base_server/frontend/ai-trading-platform/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "1.2.1",
     "dompurify": "^3.2.6",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.11",
     "he": "^1.2.0",
     "http-proxy-middleware": "^3.0.5",
