--- a/base_server/frontend/ai-trading-platform/package.json
+++ b/base_server/frontend/ai-trading-platform/package.json
@@ -42,24 +42,32 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "1.2.1",
+    "cmdk": "^1.1.1",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.11",
     "he": "^1.2.0",
     "http-proxy-middleware": "^3.0.5",
+    "input-otp": "^1.4.2",
     "lucide-react": "0.263.0",
     "markdown-to-jsx": "^7.7.12",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
     "react": "18.2.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.62.0",
     "react-is": "18.2.0",
     "react-redux": "^9.2.0",
+    "react-resizable-panels": "^3.0.4",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.7.2",
+    "sonner": "^2.0.7",
     "swr": "2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.0",
+    "vaul": "^1.1.2",
     "zustand": "4.4.0"
   },
   "devDependencies": {
