--- a/base_server/frontend/ai-trading-platform/package.json
+++ b/base_server/frontend/ai-trading-platform/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -48,12 +48,14 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.11",
     "he": "^1.2.0",
+    "highlight.js": "^11.11.1",
     "http-proxy-middleware": "^3.0.5",
     "input-otp": "^1.4.2",
     "lucide-react": "0.263.0",
     "markdown-to-jsx": "^7.7.12",
     "next": "^15.4.2",
     "next-themes": "^0.4.6",
+    "prismjs": "^1.30.0",
     "react": "18.2.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "18.2.0",
