--- a/base_server/frontend/ai-trading-platform/package.json
+++ b/base_server/frontend/ai-trading-platform/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 -p 3000",
+    "dev": "cross-env HOSTNAME=127.0.0.1 next dev -p 3000 -H 127.0.0.1",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +18,7 @@
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dismissable-layer": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
@@ -39,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "1.2.1",
@@ -69,6 +71,7 @@
     "swr": "2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zustand": "4.4.0"
   },
@@ -78,6 +81,7 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "10.4.0",
+    "cross-env": "^10.0.0",
     "eslint": "8.0.0",
     "postcss": "^8.5.6",
     "prettier": "2.8.0",
