--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -129,7 +129,7 @@ services:
       - "${REDIS_PORT:-6379}:6379"
     command: >
       redis-server 
-      --requirepass ${REDIS_PASSWORD:-dkdlqmsbwlstmdptmvkWkd1234!}
+      --requirepass ${REDIS_PASSWORD:-YOUR_PASSWORD}
       --bind 0.0.0.0
       --port 6379
       --tcp-backlog 511
@@ -147,7 +147,7 @@ services:
     volumes:
       - redis-data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-dkdlqmsbwlstmdptmvkWkd1234!}", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-YOUR_PASSWORD}", "ping"]
       interval: 10s
       timeout: 3s
       retries: 3
@@ -165,10 +165,10 @@ services:
     ports:
       - "${MYSQL_PORT:-3306}:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-dkdlqmsbwlstmdptmvkWkd1234!}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-YOUR_PASSWORD}
       - MYSQL_DATABASE=${MYSQL_DATABASE:-finance_global}
       - MYSQL_USER=${MYSQL_USER:-trading}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-dkdlqmsbwlstmdptmvkWkd1234!}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-YOUR_PASSWORD}
       - TZ=Asia/Seoul
     volumes:
       - mysql-data:/var/lib/mysql
@@ -181,7 +181,7 @@ services:
       --max-connections=200
       --bind-address=0.0.0.0
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD:-dkdlqmsbwlstmdptmvkWkd1234!}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD:-YOUR_PASSWORD}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -233,11 +233,11 @@ volumes:
 #    NEXT_PUBLIC_WS_URL=ws://localhost:8000
 #    
 #    # 데이터베이스 설정
-#    MYSQL_ROOT_PASSWORD=dkdlqmsbwlstmdptmvkWkd1234!
+#    MYSQL_ROOT_PASSWORD=YOUR_PASSWORD
 #    MYSQL_DATABASE=finance_global
 #    MYSQL_USER=trading
-#    MYSQL_PASSWORD=dkdlqmsbwlstmdptmvkWkd1234!
-#    REDIS_PASSWORD=dkdlqmsbwlstmdptmvkWkd1234!
+#    MYSQL_PASSWORD=YOUR_PASSWORD
+#    REDIS_PASSWORD=YOUR_PASSWORD
 #    
 #    # 파일 경로 (호스트 기준)
 #    CONFIG_PATH=./base_server/application/base_web_server/base_web_server-config_local.json
