--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -56,7 +56,7 @@ services:
     container_name: trading-redis-prod
     ports:
       - "6379:6379"
-    command: redis-server --requirepass dkdlqmsbwlstmdptmvkWkd1234!
+    command: redis-server --requirepass YOUR_REDIS_PASSWORD
     volumes:
       - redis-data:/data
     healthcheck:
@@ -75,15 +75,15 @@ services:
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=dkdlqmsbwlstmdptmvkWkd1234!
+      - MYSQL_ROOT_PASSWORD=YOUR_DB_PASSWORD
       - MYSQL_DATABASE=finance_global
-      - MYSQL_USER=trading
-      - MYSQL_PASSWORD=dkdlqmsbwlstmdptmvkWkd1234!
+      - MYSQL_USER=YOUR_DB_USERNAME
+      - MYSQL_PASSWORD=YOUR_DB_PASSWORD
     volumes:
       - mysql-data:/var/lib/mysql
       - /opt/trading/db_scripts:/docker-entrypoint-initdb.d:ro
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-pdkdlqmsbwlstmdptmvkWkd1234!"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-pYOUR_DB_PASSWORD"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -122,7 +122,7 @@ volumes:
 #        "host": "trading-mysql-db.xxxx.rds.amazonaws.com",  # RDS 엔드포인트
 #        "port": 3306,
 #        "user": "trading",
-#        "password": "dkdlqmsbwlstmdptmvkWkd1234!",
+#        "password": "YOUR_PASSWORD",
 #        "database": "finance_global",
 #        "shard_databases": ["finance_shard_1", "finance_shard_2"]
 #      },
@@ -130,7 +130,7 @@ volumes:
 #        "type": "redis",
 #        "host": "10.0.x.x",  # Redis EC2 Private IP
 #        "port": 6379,
-#        "password": "dkdlqmsbwlstmdptmvkWkd1234!",
+#        "password": "YOUR_PASSWORD",
 #        "session_expire_seconds": 3600
 #      }
 #    }
