--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -7,11 +7,16 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
+    env_file:
+      - /opt/trading/frontend-config/.env
     environment:
       - NODE_ENV=production
+      - NEXT_PUBLIC_API_URL=https://bullant-kr.com
+      - NEXT_PUBLIC_WS_URL=wss://bullant-kr.com
+      - NEXT_PUBLIC_API_TIMEOUT=10000
     volumes:
-      # Frontend 설정 파일 마운팅 (로컬 테스트 방식과 동일)
-      - "/opt/trading/frontend-config/.env:/app/.env:ro"
+      # 로그 디렉토리 마운팅
+      - "/opt/trading/logs:/app/logs"
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
       interval: 30s
@@ -31,15 +36,19 @@ networks:
 #
 # 1️⃣ 설정 파일 준비:
 #    sudo mkdir -p /opt/trading/frontend-config
+#    sudo mkdir -p /opt/trading/logs
 #    sudo chown -R ubuntu:ubuntu /opt/trading
 #    
-#    # Frontend 환경 설정 파일 생성
+#    # Frontend 환경 설정 파일 생성 (.env)
 #    sudo tee /opt/trading/frontend-config/.env > /dev/null << 'EOF'
-#    NEXT_PUBLIC_API_URL=https://bullant-kr.com
-#    NEXT_PUBLIC_WS_URL=wss://bullant-kr.com
-#    BACKEND_URL=https://bullant-kr.com
+#    NEXT_PUBLIC_API_URL=http://YOUR_BACKEND_EC2_PUBLIC_IP:8000
+#    NEXT_PUBLIC_WS_URL=ws://YOUR_BACKEND_EC2_PUBLIC_IP:8000
+#    NEXT_PUBLIC_API_TIMEOUT=10000
 #    NODE_ENV=production
 #    EOF
+#    
+#    # Backend EC2 Public IP로 변경 (실제 IP 입력)
+#    sudo sed -i 's/YOUR_BACKEND_EC2_PUBLIC_IP/52.78.123.45/g' /opt/trading/frontend-config/.env
 #
 # 2️⃣ Frontend 서비스 실행:
 #    docker-compose -f docker-compose.frontend.yml pull
