--- a/base_server/frontend/ai-trading-platform/Dockerfile
+++ b/base_server/frontend/ai-trading-platform/Dockerfile
@@ -16,12 +16,14 @@
 FROM node:18-alpine AS builder
 
 # 🔧 Build Arguments (Jenkins에서 주입)
-ARG NEXT_PUBLIC_API_URL=http://localhost:8000
-ARG NEXT_PUBLIC_WS_URL=ws://localhost:8000
-ARG NEXT_PUBLIC_API_TIMEOUT=10000
+ARG NEXT_PUBLIC_API_URL=https://bullant-kr.com
+ARG NEXT_PUBLIC_API_BASE=https://bullant-kr.com
+ARG NEXT_PUBLIC_WS_URL=wss://bullant-kr.com
+ARG NEXT_PUBLIC_API_TIMEOUT=60000
 
 # 🌍 Build-time 환경변수 설정 (Next.js 빌드에서 사용)
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+ENV NEXT_PUBLIC_API_BASE=${NEXT_PUBLIC_API_BASE}
 ENV NEXT_PUBLIC_WS_URL=${NEXT_PUBLIC_WS_URL}
 ENV NEXT_PUBLIC_API_TIMEOUT=${NEXT_PUBLIC_API_TIMEOUT}
 ENV NODE_ENV=production
